Make a bit wider to prevent wrapping

--- a/web/css/sort-result.css
+++ b/web/css/sort-result.css
@@ -13,7 +13,7 @@
 .sort-result .snapshot {
     position: relative;
     display:inline-block;
-    width:95px;
+    width:105px;
     padding: 3px;
     margin: 3px;
     border: 1px gray dotted;
